Fixed timeline header overlapping dropdown

--- a/assets/stylesheets/scss/user.scss
+++ b/assets/stylesheets/scss/user.scss
@@ -72,7 +72,7 @@
         position: absolute;
         top: 5px;
         width: calc(100% - 12px);
-        z-index: 999;
+        z-index: 3;
 
         .title {
             color: #fff;
